# LeylineVirtualAudioDeviceRust

./: .gitattributes  .gitignore  BUILD_REVIEW.MD  CODE_REVIEW.md  Cargo.toml  GEMINI.MD  GEMINI_PROJECT_SETUP.md  LICENSE  Makefile.toml  PROJECT_PROGRESS.MD  README.md  TEST_REVIEW.md  TOOLCHAIN_REVIEW.md  hsa_verify.txt  hsa_verify_clean.txt  hsa_verify_final.txt  test_createfile.ps1  test_ksquery.ps1  test_mmdev.ps1  tree_output.txt
.agent/: BUILD_REVIEW.MD  CODE_REVIEW.md  COMMIT_MESSAGE.MD  GEMINI.MD  GEMINI_PROJECT_SETUP.md  PROJECT_PROGRESS.MD  SCRIPTS_REVIEW.md  TEST_REVIEW.md  TOOLCHAIN_REVIEW.md
.agent/references/: ResourceManager.h  wdf.h  wdm.h  wudfwdm.h
.agent/workflows/: status.md  verify.md
.cargo/: config.toml
crates/leyline-kernel/: Cargo.toml  build.rs  build_errors.txt  build_log.txt  build_verify.txt  build_verify_clean.txt  build_verify_final.txt  build_verify_final_zero.txt  leyline.inx  test_log.txt
crates/leyline-kernel/src/: adapter.rs  audio_bindings.rs  audio_wrapper.h  buffer.rs  circuit.rs  constants.rs  descriptors.rs  dispatch.rs  lib.rs  math.rs  stream.rs  topology.rs  vtables.rs  wavert.rs
crates/leyline-kernel/src/descriptors/: capture.rs  common.rs  mod.rs  render.rs
crates/leyline-shared/: Cargo.toml
scripts/: Automate-VM-Verification.ps1  Debug-Troubleshoot.ps1  Diagnose-Endpoints.ps1  Diagnose-VM.ps1  Diagnose-VMAudio.ps1  Enable-KernelDebug.ps1  Install-VM.ps1  Install.ps1  LaunchBuildEnv.ps1  Test-HostReady.ps1  Uninstall-VM.ps1  Uninstall.ps1  Update-Version.ps1  build_apo.ps1  install_driver.ps1  package_driver.ps1  uninstall_driver.ps1
scripts/verification/: Verify-AEB-Status.ps1
src/APO/: LeylineAPO.cpp  LeylineAPO.def  LeylineAPO.h  (+4 more)
tasks/: todo.md
(+10 files in other folders)
