[workspace]
members = [
    "crates/leyline-kernel",
    "crates/leyline-shared",
]
resolver = "3"

[workspace.metadata.wdk.driver-model]
driver-type = "KMDF"
kmdf-version-major = 1
target-kmdf-version-minor = 33

[profile.release]
panic = "abort"
lto = true
opt-level = "z"

[profile.dev]
panic = "abort"
