[package]
name = "leyline-kernel"
version = "0.1.0"
edition = "2021"
authors = ["Randall Rosas (Slategray)"]

[lib]
name = "leyline"
crate-type = ["cdylib"]

[dependencies]
wdk = "0.2"
wdk-sys = "0.2"
wdk-alloc = "0.2"
leyline-shared = { path = "../leyline-shared" }

[profile.release]
panic = "abort"
lto = true
opt-level = "z"

[profile.dev]
panic = "abort"
